--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "concurrently \"bunx --bun vite\" \"bun --watch server/index.ts\" \"bunx ngrok http --config=ngrok.yml --domain=tolerant-bengal-hideously.ngrok-free.app 3001\"",
+    "dev": "concurrently \"bunx --bun vite\" \"bun --watch server/bun-server.ts\" \"bunx ngrok http --config=ngrok.yml --domain=tolerant-bengal-hideously.ngrok-free.app 3001\"",
     "dev:tunnel": "bunx ngrok http --config=ngrok.yml --domain=tolerant-bengal-hideously.ngrok-free.app 3001",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
@@ -25,7 +25,7 @@
     "@radix-ui/react-toggle": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.7",
     "@react-spring/web": "^9.7.3",
-    "@types/bun": "^1.2.0",
+    "@types/bun": "^1.2.1",
     "@types/react-virtualized": "^9.22.0",
     "axios": "^1.6.8",
     "babel-plugin-react-compiler": "^19.0.0-beta-27714ef-20250124",
@@ -71,7 +71,10 @@
     "prettier": "3.2.5",
     "tailwindcss": "^3.0.0",
     "typescript": "^5.2.2",
-    "vite": "^5.2.0"
+    "vite": "^5.2.0",
+    "vite-plugin-terminal": "^1.2.0",
+    "vite-plugin-top-level-await": "^1.4.4",
+    "vite-plugin-wasm": "^3.4.1"
   },
   "trustedDependencies": [
     "@clerk/shared"
