--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,12 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
 
+    /* Terminal plugin */
+    "types": [
+      "vite-plugin-terminal/client",
+      "bun"
+    ],
+
     /* Path aliases */
     "baseUrl": ".",
     "paths": {
