--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "@clerk/clerk-react": "^5.22.6",
     "@clerk/react-router": "^1.0.1",
     "@electric-sql/pglite": "^0.2.16",
-    "@humeai/voice-react": "^0.1.12",
     "@prisma/client": "^6.3.1",
     "@radix-ui/react-avatar": "^1.1.2",
     "@radix-ui/react-dialog": "^1.1.5",
@@ -32,15 +31,16 @@
     "@radix-ui/react-toggle": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.7",
     "@react-spring/web": "^9.7.3",
-    "@types/bun": "^1.2.1",
+    "@types/bun": "^1.2.2",
     "@types/react-virtualized": "^9.22.0",
-    "axios": "^1.6.8",
+    "axios": "^1.7.9",
     "babel-plugin-react-compiler": "^19.0.0-beta-27714ef-20250124",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "expression-colors": "github:HumeAI/colors",
     "framer-motion": "^11.0.20",
-    "hume": "^0.8.6",
+    "hume": "^0.9.10",
     "lucide-react": "^0.474.0",
     "openai": "^4.29.2",
     "pino": "^9.6.0",
@@ -56,7 +56,7 @@
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "ts-pattern": "^5.0.8",
-    "zod": "^3.22.4"
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@babel/core": "^7.26.7",
