added working server files

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -2,20 +2,27 @@ FROM oven/bun:latest
 
 WORKDIR /app
 
-# Install curl for healthcheck
-RUN apt-get update && apt-get install -y curl && rm -rf /var/lib/apt/lists/*
+# Install OpenSSL and curl for Prisma and healthcheck
+RUN apt-get update -y \
+    && apt-get install -y openssl curl \
+    && rm -rf /var/lib/apt/lists/*
 
-# Copy package files
+# Copy package files and schema
 COPY package.json bun.lock ./
+COPY prisma ./prisma
 
-# Install dependencies
-RUN bun install
+# Install dependencies and generate Prisma Client
+RUN bun install \
+    && mv node_modules ../
 
-# Copy server and src code
+RUN bunx prisma generate --schema ./prisma/schema.prisma
+
+RUN bun i -g prisma
+
+# Copy application code
 COPY server ./server
-
-# Expose the server port (3001 to match your ngrok setup)
-EXPOSE 3001
+COPY .env ./.env
+COPY src ./src
 
 # Start the server with watch mode
-CMD ["bun", "--watch", "server/bun-server.ts"]
+CMD ["bun", "run", "--watch", "server/bun-server.ts"]
