--- a/package.json
+++ b/package.json
@@ -6,9 +6,8 @@
   "scripts": {
     "dev": "bunx --bun vite",
     "dev:local": "concurrently \"bunx --bun vite\" \"bun --watch server/bun-server.ts\"",
-    "build": "tsc && vite build",
+    "build": "bunx --bun vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview",
     "docker:up": "docker-compose up -d",
     "docker:down": "docker-compose down",
     "docker:logs": "docker-compose logs -f bun-server",
@@ -60,6 +59,7 @@
     "zustand": "^5.0.3"
   },
   "devDependencies": {
+    "@vercel/node": "^3.0.0",
     "@babel/core": "^7.26.7",
     "@babel/preset-env": "^7.26.7",
     "@babel/preset-react": "^7.26.3",
