--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "framer-motion": "^11.0.20",
     "hume": "^0.9.10",
     "lucide-react": "^0.474.0",
+    "meyda": "^5.6.3",
     "openai": "^4.29.2",
     "pino": "^9.6.0",
     "pino-pretty": "^13.0.0",
