--- a/package.json
+++ b/package.json
@@ -46,8 +46,8 @@
     "pino": "^9.6.0",
     "pino-pretty": "^13.0.0",
     "priorityqueuejs": "^2.0.0",
-    "react": "^19.1.0-canary-9eabb373-20250124",
-    "react-dom": "^19.1.0-canary-9eabb373-20250124",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-router": "^7.1.3",
     "react-router-dom": "^7.1.3",
     "react-virtualized": "^9.22.6",
