--- a/tsconfig.json
+++ b/tsconfig.json
@@ -37,6 +37,6 @@
       "@utils/*": ["src/utils/*"]
     }
   },
-  "include": ["src", "server"],
+  "include": ["src", "server", "api"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
