--- a/vercel.json
+++ b/vercel.json
@@ -2,6 +2,12 @@
   "buildCommand": "bunx --bun vite build",
   "outputDirectory": "dist",
   "framework": "vite",
+  "functions": {
+    "api/**/*.ts": {
+      "runtime": "@vercel/node",
+      "excludeFiles": "!(**/route.ts)"
+    }
+  },
   "rewrites": [
     {
       "source": "/api/(.*)",
