--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "start": "bunx --bun vite preview",
     "dev": "bunx --bun vite",
     "dev:local": "concurrently \"bunx --bun vite\" \"bun --watch server/bun-server.ts\"",
     "build": "bunx --bun vite build",
