--- a/vercel.json
+++ b/vercel.json
@@ -9,8 +9,12 @@
   },
   "rewrites": [
     {
-      "source": "/api/(.*)",
-      "destination": "/api/$1"
+      "source": "/api/:path*",
+      "destination": "/api/:path*"
+    },
+    {
+      "source": "/api/:path*/",
+      "destination": "/api/:path*"
     },
     {
       "source": "/((?!api/|sign-in|sign-up).*).*",
