rollback vercel.json changes

--- a/vercel.json
+++ b/vercel.json
@@ -9,12 +9,8 @@
   },
   "rewrites": [
     {
-      "source": "/api/:path*",
-      "destination": "/api/:path*"
-    },
-    {
-      "source": "/api/:path*/",
-      "destination": "/api/:path*"
+      "source": "/api/(.*)",
+      "destination": "/api/$1"
     },
     {
       "source": "/((?!api/|sign-in|sign-up).*).*",
