--- a/package.json
+++ b/package.json
@@ -6,84 +6,69 @@
   "scripts": {
     "start": "bunx --bun vite preview",
     "dev": "bunx --bun vite",
-    "dev:local": "concurrently \"bunx --bun vite\" \"bun --watch server/bun-server.ts\"",
     "build": "bunx --bun vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "docker:up": "docker-compose up -d",
-    "docker:down": "docker-compose down",
-    "docker:logs": "docker-compose logs -f bun-server",
-    "docker:logs:all": "docker-compose logs -f",
-    "docker:restart": "docker-compose restart bun-server",
-    "docker:dev": "docker-compose up -d && docker-compose logs -f"
+    "docker:up": "docker-compose up --build -d",
+    "docker:down": "docker-compose down"
   },
   "dependencies": {
-    "@clerk/clerk-react": "^5.22.6",
-    "@clerk/react-router": "^1.0.1",
-    "@electric-sql/pglite": "^0.2.16",
-    "@prisma/client": "^6.3.1",
-    "@radix-ui/react-avatar": "^1.1.2",
-    "@radix-ui/react-dialog": "^1.1.5",
-    "@radix-ui/react-dropdown-menu": "^2.1.5",
-    "@radix-ui/react-label": "^2.1.1",
-    "@radix-ui/react-separator": "^1.1.1",
-    "@radix-ui/react-slot": "^1.1.1",
-    "@radix-ui/react-switch": "^1.1.2",
-    "@radix-ui/react-toggle": "^1.1.1",
-    "@radix-ui/react-tooltip": "^1.1.7",
-    "@react-spring/web": "^9.7.3",
+    "@clerk/clerk-react": "^5.23.0",
+    "@clerk/react-router": "^1.1.0",
+    "@prisma/client": "^6.4.1",
+    "@radix-ui/react-avatar": "^1.1.3",
+    "@radix-ui/react-dialog": "^1.1.6",
+    "@radix-ui/react-dropdown-menu": "^2.1.6",
+    "@radix-ui/react-label": "^2.1.2",
+    "@radix-ui/react-separator": "^1.1.2",
+    "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-switch": "^1.1.3",
+    "@radix-ui/react-toggle": "^1.1.2",
+    "@radix-ui/react-tooltip": "^1.1.8",
     "@types/bun": "^1.2.2",
-    "@types/react-virtualized": "^9.22.0",
-    "axios": "^1.7.9",
+    "@types/react-virtualized": "^9.22.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "expression-colors": "github:HumeAI/colors",
-    "framer-motion": "^11.0.20",
+    "framer-motion": "^12.4.7",
     "hume": "^0.9.10",
-    "lucide-react": "^0.474.0",
+    "lucide-react": "^0.475.0",
     "meyda": "^5.6.3",
-    "openai": "^4.29.2",
-    "pino": "^9.6.0",
-    "pino-pretty": "^13.0.0",
-    "priorityqueuejs": "^2.0.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router": "^7.1.3",
-    "react-router-dom": "^7.1.3",
+    "openai": "^4.85.3",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "react-router": "^7.2.0",
+    "react-router-dom": "^7.2.0",
     "react-virtualized": "^9.22.6",
-    "remeda": "^2.20.0",
-    "svix": "^1.45.1",
-    "tailwind-merge": "^2.6.0",
+    "remeda": "^2.20.2",
+    "svix": "^1.59.1",
+    "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
-    "ts-pattern": "^5.0.8",
+    "ts-pattern": "^5.6.2",
     "zod": "^3.24.2",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
-    "@vercel/node": "^3.0.0",
-    "@babel/core": "^7.26.7",
-    "@babel/preset-env": "^7.26.7",
+    "@babel/core": "^7.26.9",
+    "@babel/preset-env": "^7.26.9",
     "@babel/preset-react": "^7.26.3",
     "@babel/preset-typescript": "^7.26.0",
-    "@types/node": "^20.11.30",
-    "@types/priorityqueuejs": "^1.0.4",
-    "@types/react": "^18.2.66",
-    "@types/react-dom": "^18.2.22",
-    "@typescript-eslint/eslint-plugin": "^7.2.0",
-    "@typescript-eslint/parser": "^7.2.0",
-    "@vitejs/plugin-react": "^4.2.1",
+    "@types/node": "^22.13.4",
+    "@types/react": "^19.0.10",
+    "@types/react-dom": "^19.0.4",
+    "@typescript-eslint/eslint-plugin": "^8.24.1",
+    "@typescript-eslint/parser": "^8.24.1",
+    "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.20",
-    "concurrently": "^9.0.1",
-    "eslint": "^8.57.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.6",
-    "postcss": "^8.5.1",
-    "prettier": "3.2.5",
-    "tailwindcss": "^3.0.0",
-    "typescript": "^5.2.2",
-    "vite": "^5.2.0",
-    "vite-plugin-top-level-await": "^1.4.4",
-    "vite-plugin-wasm": "^3.4.1"
+    "concurrently": "^9.1.2",
+    "eslint": "^9.20.1",
+    "eslint-plugin-react-hooks": "^5.1.0",
+    "eslint-plugin-react-refresh": "^0.4.19",
+    "postcss": "^8.5.3",
+    "prettier": "3.5.1",
+    "tailwindcss": "^4.0.7",
+    "typescript": "^5.7.3",
+    "vite": "^6.1.1"
   },
   "trustedDependencies": [
     "@clerk/shared"
