--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@radix-ui/react-switch": "^1.1.3",
     "@radix-ui/react-toggle": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.8",
+    "@tanstack/react-query": "^5.66.9",
     "@types/bun": "^1.2.2",
     "@types/react-virtualized": "^9.22.2",
     "@vercel/analytics": "^1.5.0",
