--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dev": "bunx --bun vite",
     "build": "bunx --bun vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "test": "bunx --bun vitest",
     "docker:up": "docker-compose up --build -d",
     "docker:down": "docker-compose down"
   },
@@ -47,6 +48,7 @@
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
     "ts-pattern": "^5.6.2",
+    "vitest": "^3.0.6",
     "zod": "^3.24.2",
     "zustand": "^5.0.3"
   },
