--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
     "ts-pattern": "^5.6.2",
+    "uuid": "^11.1.0",
     "vitest": "^3.0.6",
     "zod": "^3.24.2",
     "zustand": "^5.0.3"
