--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "openai": "^4.85.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-filepond": "^7.1.3",
     "react-router": "^7.2.0",
     "react-router-dom": "^7.2.0",
     "react-virtualized": "^9.22.6",
