--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@radix-ui/react-toggle": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.8",
     "@tanstack/react-query": "^5.66.9",
+    "@tanstack/react-virtual": "^3.13.2",
     "@types/bun": "^1.2.2",
     "@types/react-virtualized": "^9.22.2",
     "@vercel/analytics": "^1.5.0",
