--- a/package.json
+++ b/package.json
@@ -6,11 +6,16 @@
   "scripts": {
     "start": "bunx --bun vite preview",
     "dev": "bunx --bun vite",
+    "dev:all": "bun run --parallel dev nitro:dev",
     "build": "bunx --bun vite build",
+    "build:all": "bunx --bun vite build && bunx --bun nitro build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "test": "bunx --bun vitest",
     "docker:up": "docker-compose up --build -d",
-    "docker:down": "docker-compose down"
+    "docker:down": "docker-compose down",
+    "nitro:dev": "bunx --bun nitro dev",
+    "nitro:build": "bunx --bun nitro build",
+    "nitro:preview": "node .output/server/index.mjs"
   },
   "dependencies": {
     "@clerk/clerk-react": "^5.23.0",
@@ -74,6 +79,8 @@
     "eslint": "^9.20.1",
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
+    "h3": "^1.15.1",
+    "nitropack": "^2.10.4",
     "postcss": "^8.5.3",
     "prettier": "3.5.1",
     "tailwindcss": "^3.0.0",
