--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "docker:down": "docker-compose down",
     "nitro:dev": "bunx --bun nitro dev",
     "nitro:build": "bunx --bun nitro build",
-    "nitro:preview": "node .output/server/index.mjs"
+    "nitro:preview": "node .output/server/index.mjs",
+    "vercel-build": "bunx --bun nitro build && bunx --bun vite build"
   },
   "dependencies": {
+    "@clerk/backend": "^1.24.3",
     "@clerk/clerk-react": "^5.23.0",
     "@clerk/react-router": "^1.1.0",
     "@prisma/client": "^6.4.1",
@@ -36,6 +38,8 @@
     "@tanstack/react-virtual": "^3.13.2",
     "@types/bun": "^1.2.2",
     "@types/react-virtualized": "^9.22.2",
+    "@upstash/redis": "^1.34.4",
+    "@upstash/vector": "^1.2.0",
     "@vercel/analytics": "^1.5.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -54,7 +58,7 @@
     "react-virtualized": "^9.22.6",
     "remeda": "^2.20.2",
     "styled-components": "^6.1.15",
-    "svix": "^1.59.1",
+    "svix": "^1.60.1",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
     "ts-pattern": "^5.6.2",
