Add simple healthcheck endpoint for Nitro server testing

--- a/vercel.json
+++ b/vercel.json
@@ -4,6 +4,10 @@
   "framework": "vite",
   "rewrites": [
     {
+      "source": "/api/healthcheck",
+      "destination": "/api/healthcheck"
+    },
+    {
       "source": "/api/(.*)",
       "destination": "/api/$1"
     },
