Fix build configuration for Vercel deployment

--- a/.npmrc
+++ b/.npmrc
@@ -1,4 +1,7 @@
 @humeai:registry=https://registry.npmjs.org/
+# Disable optional dependencies to prevent build failures
+ignore-optional=true
+# Ensure legacy peer dependencies compatibility
 legacy-peer-deps=true
 shamefully-hoist=true
 strict-peer-dependencies=false
