--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@radix-ui/react-tabs": "^1.1.3",
     "@radix-ui/react-toggle": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.8",
+    "@rollup/rollup-linux-x64-gnu": "^4.34.8",
     "@tanstack/react-query": "^5.66.9",
     "@tanstack/react-virtual": "^3.13.2",
     "@types/bun": "^1.2.2",
