--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "nitro:dev": "bunx --bun nitro dev",
     "nitro:build": "bunx --bun nitro build",
     "nitro:preview": "node .output/server/index.mjs",
-    "vercel-build": "npx nitro build && npx vite build"
+    "vercel-build": "bunx --bun nitro build && bunx --bun vite build"
   },
   "dependencies": {
     "@clerk/backend": "^1.24.3",
@@ -46,6 +46,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "expression-colors": "github:HumeAI/colors",
+    "filepond": "^4.32.7",
     "framer-motion": "^12.4.7",
     "hume": "^0.9.10",
     "lucide-react": "^0.475.0",
