--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
   "version": 2,
-  "buildCommand": "npm run vercel-build",
+  "buildCommand": "bun run vercel-build",
   "outputDirectory": "dist",
   "framework": "vite",
   "rewrites": [
