--- a/vercel.json
+++ b/vercel.json
@@ -3,6 +3,11 @@
   "buildCommand": "bun run vercel-build",
   "outputDirectory": "dist",
   "framework": "vite",
+  "functions": {
+    "api/**/*": {
+      "runtime": "nodejs18.x"
+    }
+  },
   "routes": [
     { 
       "src": "/api/webhooks/clerk", 
@@ -20,46 +25,26 @@
       "src": "/api/(.*)", 
       "dest": "/.output/server/index.mjs" 
     },
-    { 
-      "src": "/(assets|images)/.*", 
-      "headers": { "cache-control": "public, max-age=31536000, immutable" },
-      "continue": true 
+    {
+      "src": "/assets/(.*)",
+      "headers": {
+        "cache-control": "public, max-age=31536000, immutable"
+      },
+      "continue": true
+    },
+    {
+      "src": "/(.*)",
+      "headers": {
+        "cache-control": "public, max-age=0, must-revalidate",
+        "access-control-allow-origin": "*",
+        "access-control-allow-methods": "GET,OPTIONS,PATCH,DELETE,POST,PUT",
+        "access-control-allow-headers": "*"
+      },
+      "continue": true
     },
     { 
       "src": "/(.*)", 
       "dest": "/index.html" 
-    }
-  ],
-  "headers": [
-    {
-      "source": "/(.*)",
-      "headers": [
-        {
-          "key": "Cache-Control",
-          "value": "public, max-age=0, must-revalidate"
-        },
-        {
-          "key": "Access-Control-Allow-Origin",
-          "value": "*"
-        },
-        {
-          "key": "Access-Control-Allow-Methods",
-          "value": "GET,OPTIONS,PATCH,DELETE,POST,PUT"
-        },
-        {
-          "key": "Access-Control-Allow-Headers",
-          "value": "*"
-        }
-      ]
-    },
-    {
-      "source": "/assets/(.*)",
-      "headers": [
-        {
-          "key": "Cache-Control",
-          "value": "public, max-age=31536000, immutable"
-        }
-      ]
     }
   ]
 }
